Cambio del contenido donde-estamos.html y ofertas.html

--- a/donde-estamos.html
+++ b/donde-estamos.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="donde-estamos.html" class="active">Dónde estamos</a></li>
+                <li><a href="donde-estamos-secundario.html" class="active">Dónde estamos tambien</a></li>
                 <li><a href="quienes-somos.html">Quiénes somos</a></li>
                 <li><a href="ofertas.html">Ofertas</a></li>
                 <li><a href="contacto.html">Contacta con nosotros</a></li>
