--- a/ofertas.html
+++ b/ofertas.html
@@ -15,6 +15,7 @@
                 <li><a href="quienes-somos.html">Quiénes somos</a></li>
                 <li><a href="ofertas.html" class="active">Ofertas</a></li>
                 <li><a href="contacto.html">Contacta con nosotros</a></li>
+                <li><a href="contactosecundario.html">Contacta con nosotros secundario</a></li>
             </ul>
         </nav>
     </header>
